# ipykernel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindJANSSON.cmake  FindZMQ.cmake
examples/: CMakeLists.txt  echo.c
src/: CMakeLists.txt  communication.c  communication.h  concat.c  concat.h  eventloop.c  eventloop.h  globals.c  globals.h  handlers.c  handlers.h  heartbeat.c  heartbeat.h  hmac.c  hmac.h  ialdor.c  interpreter.c  interpreter.h  json.c  json.h  msg.c  msg.h  options.c  options.h  profile.c  profile.h  sockets.c  sockets.h  types.h  util.c  util.h  uuid.c  uuid.h  zeromq.c  zeromq.h
